reportbug (4.12+fixes) UNRELEASED; urgency=low

  * reportbug/utils.py
    - only take file name and md5sum from Conffile from dpkg --status; thanks to
      all the reporters; Closes: #577986

 -- Sandro Tosi <morph@debian.org>  Thu, 22 Apr 2010 19:30:32 +0200

reportbug (4.12) unstable; urgency=low

  * reportbug/debianbts.py
    - fix description for 'experimental' tag; thanks to Raphael Rigo for the
      report; Closes: #575044
    - check the available packages (not only the installed ones) when reporting
      a wnpp bug; thanks to Filippo Giunchedi for the report; Closes: #565435
  * bin/reportbug
    - removed the information that an empty subject would stop the report: it
      will continue until entered or Ctrl+c; thanks Torquil Macdonald Sørensen
      for the report; Closes: #575450
    - keep presenting the severity menu until one is selected (prevent a crash
      with urwid UI and Cancel button); thanks to Noah Slater for the report;
      Closes: #461908
    - treat every FTBFS bug (pseudo-severity 'does-not-build') as 'serious' but
      adding a note in the Justification pseudo-header if the package was built
      successfully in the past; thanks to Alexander Schmehl for the report;
      Closes: #390466
    - in case of a bug for an undisclosed vulnerability (tagged 'security'),
      report it to the private Security Team mailing list instead of to the
      public BTS (to coordinate the release of the fix); thanks to Chris
      Lawrence for the report and to the Sec Team for review; Closes: #474187
  * reportbug/submit.py
    - clarify that in case no acknowledge is received, then there was an error;
      thanks to mpapet for the report; Closes: #575418
  * reportbug/ui/gtk2_ui.py
    - pass 'buglist' to 'sync_pre_operation' method of 'HandleBTSQueryPage'
      class, needed to run querybts; thanks to Andrey Rahmatullin for the
      report; Closes: #565283
    - new method to correctly wrap the report body: before the text was all on a